--- a/src/coms/personal-center/views/personal-center.html
+++ b/src/coms/personal-center/views/personal-center.html
@@ -4,12 +4,12 @@
 			<div class="col-md-4 col-sm-12 cen-left">
 				<div class="cen-info">
 					<div class="user-avatar">
-						<img src="../../../assets/img/settings/user_icon_md.png">
+						<img src="assets/img/settings/user_icon_md.png">
 						<span class="user-name">呼呼</span>
 					</div>
 					<div class="user-info">
-						<span><img src="../../../assets/img/loc.png" /><i>高中</i>|<i>数学老师</i>|<img class="user-info-icon" src="../../../assets/img/female.png" /></span>
-						<span class="user-school"><img class="user-info-icon" src="../../../assets/img/tie.png" />知好乐学校</span>
+						<span><img src="assets/img/loc.png" /><i>高中</i>|<i>数学老师</i>|<img class="user-info-icon" src="assets/img/female.png" /></span>
+						<span class="user-school"><img class="user-info-icon" src="assets/img/tie.png" />知好乐学校</span>
 						<button class="btn-general btn-pink">上传资源</button>
 					</div>
 				</div>
@@ -28,20 +28,20 @@
 				<div class="cen-right-up">
 					<h3 class="cen-h2">备课统计</h3>
 					<div class="left-arrow">
-						<span></span><img src="../../../assets/img/left_arrow.png" />
+						<span></span><img src="assets/img/left_arrow.png" />
 					</div>
 					<div class="statistic-content">
 						<p>必修一已备完28节课，共32个备课夹，256条资源，还有22节课要备。</p>
 						<div class="statistic-box">
 							<span>已备课：52%</span>
-							<img src="../../../assets/img/statistic.png"/>
+							<img src="assets/img/statistic.png"/>
 							<span>未备课：48%</span>
 						</div>
 						<p>必修一</p>
 					</div>
 					<div class="right-arrow">
 						<span></span>
-						<img src="../../../assets/img/right_arrow.png"/>
+						<img src="assets/img/right_arrow.png"/>
 					</div>
 				</div>
 				<div class="cen-right-down">
@@ -79,7 +79,7 @@
 							<ul class="row">
 								<li class="active">
 									<div class="col-md-8 col-sm-8">
-										<img src="../../../assets/img/resource_img.png" />
+										<img src="assets/img/resource_img.png" />
 										<span class="resource-title">荷塘月色</span>
 									</div>
 									<div class="col-md-2 col-sm-2">
@@ -91,7 +91,7 @@
 								</li>
 								<li>
 									<div class="col-md-8 col-sm-8">
-										<img src="../../../assets/img/resource_img.png" />
+										<img src="assets/img/resource_img.png" />
 										<span class="resource-title">荷塘月色</span>
 									</div>
 									<div class="col-md-2 col-sm-2">
@@ -103,7 +103,7 @@
 								</li>
 								<li>
 									<div class="col-md-8 col-sm-8">
-										<img src="../../../assets/img/resource_img.png" />
+										<img src="assets/img/resource_img.png" />
 										<span class="resource-title">荷塘月色</span>
 									</div>
 									<div class="col-md-2 col-sm-2">
@@ -115,7 +115,7 @@
 								</li>
 								<li>
 									<div class="col-md-8 col-sm-8">
-										<img src="../../../assets/img/resource_img.png" />
+										<img src="assets/img/resource_img.png" />
 										<span class="resource-title">荷塘月色</span>
 									</div>
 									<div class="col-md-2 col-sm-2">
@@ -127,7 +127,7 @@
 								</li>
 								<li>
 									<div class="col-md-8 col-sm-8">
-										<img src="../../../assets/img/resource_img.png" />
+										<img src="assets/img/resource_img.png" />
 										<span class="resource-title">荷塘月色</span>
 									</div>
 									<div class="col-md-2 col-sm-2">
