--- a/src/coms/settings/views/settings.html
+++ b/src/coms/settings/views/settings.html
@@ -4,7 +4,7 @@
 	        <div class="modal-body avatar-modal-body">
 	            <div class="nav nav-tabs avatar-tabs" role="tablist">
 	            	<ul>
-	            		<!--<img class="tab-active" src="../../../assets/img/settings/tab_active.png">-->
+	            		<!--<img class="tab-active" src="assets/img/settings/tab_active.png">-->
 	            		<li role="presentation" class="active"><a href="#system-avatar" aria-controls="system-avatar" role="tab" data-toggle="tab">系统头像</a></li>
 	            		<li role="presentation"><a href="#self-avatar" aria-controls="self-avatar" role="tab" data-toggle="tab">自定义头像</a></li>
 	            	</ul>
@@ -12,20 +12,20 @@
 	            <div class="tab-content avatar-tab-content">
 	            	<div role="tabpanel" class="tab-pane active" id="system-avatar">
 	            		<ul>
-	            			<li><img src="../../../assets/img/settings/user_icon.png" /></li>
-	            			<li><img src="../../../assets/img/settings/user_icon.png" /></li>
-	            			<li><img src="../../../assets/img/settings/user_icon.png" /></li>
-	            			<li><img src="../../../assets/img/settings/user_icon.png" /></li>
-	            			<li><img src="../../../assets/img/settings/user_icon.png" /></li>
-	            			<li><img src="../../../assets/img/settings/user_icon.png" /></li>
-	            			<li><img src="../../../assets/img/settings/user_icon.png" /></li>
-	            			<li><img src="../../../assets/img/settings/user_icon.png" /></li>
-	            			<li><img src="../../../assets/img/settings/user_icon.png" /></li>
-	            			<li><img src="../../../assets/img/settings/user_icon.png" /></li>
-	            			<li><img src="../../../assets/img/settings/user_icon.png" /></li>
-	            			<li><img src="../../../assets/img/settings/user_icon.png" /></li>
-	            			<li><img src="../../../assets/img/settings/user_icon.png" /></li>
-	            			<li><img src="../../../assets/img/settings/user_icon.png" /></li>
+	            			<li><img src="assets/img/settings/user_icon.png" /></li>
+	            			<li><img src="assets/img/settings/user_icon.png" /></li>
+	            			<li><img src="assets/img/settings/user_icon.png" /></li>
+	            			<li><img src="assets/img/settings/user_icon.png" /></li>
+	            			<li><img src="assets/img/settings/user_icon.png" /></li>
+	            			<li><img src="assets/img/settings/user_icon.png" /></li>
+	            			<li><img src="assets/img/settings/user_icon.png" /></li>
+	            			<li><img src="assets/img/settings/user_icon.png" /></li>
+	            			<li><img src="assets/img/settings/user_icon.png" /></li>
+	            			<li><img src="assets/img/settings/user_icon.png" /></li>
+	            			<li><img src="assets/img/settings/user_icon.png" /></li>
+	            			<li><img src="assets/img/settings/user_icon.png" /></li>
+	            			<li><img src="assets/img/settings/user_icon.png" /></li>
+	            			<li><img src="assets/img/settings/user_icon.png" /></li>
 	            			<div style="clear: both;"></div>
 	            		</ul>
 	            		<div class="button-group">
@@ -36,17 +36,17 @@
 	            	<div role="tabpanel" class="tab-pane" id="self-avatar">
 	            		<div class="self-avatar-panel panel-one" ng-show="panelOneShow">
 	            			<ul>
-	            				<li class="btn-choose-avatar"><img src="../../../assets/img/settings/choose_avatar.png" ng-click="showPanel(2)"></li>
-	            				<li class="btn-photo-avatar"><img src="../../../assets/img/settings/photo_avatar.png" ng-click="showPanel(2)"></li>
+	            				<li class="btn-choose-avatar"><img src="assets/img/settings/choose_avatar.png" ng-click="showPanel(2)"></li>
+	            				<li class="btn-photo-avatar"><img src="assets/img/settings/photo_avatar.png" ng-click="showPanel(2)"></li>
 	            			</ul>
 	            		</div>
 	            		<div class="self-avatar-panel panel-two" ng-show="panelTwoShow">
 	            			<div class="panel-two-left">
-	            				<img src="../../../assets/img/settings/user_icon_slg.png" />
+	            				<img src="assets/img/settings/user_icon_slg.png" />
 	            			</div>
 	            			<div class="panel-two-right">
-	            				<img src="../../../assets/img/settings/img_size_line.png" />
-	            				<img src="../../../assets/img/settings/img_size_btn.png"  id="btn-change-size"/>
+	            				<img src="assets/img/settings/img_size_line.png" />
+	            				<img src="assets/img/settings/img_size_btn.png"  id="btn-change-size"/>
 	            				<div class="btn-box">
 	            					<button class="btn-general" ng-click="showPanel(1)">重选</button>
 		    						<button class="btn-general" ng-click="showPanel(3)">确定</button>
@@ -55,9 +55,9 @@
 	            		</div>
 	            		<div class="self-avatar-panel panel-three" ng-show="panelThreeShow">
 	            			<div class="img-box">
-	            				<img src="../../../assets/img/settings/user_icon_lg.png" />
-		            			<img src="../../../assets/img/settings/user_icon_md.png" />
-		            			<img src="../../../assets/img/settings/user_icon_sm.png" />
+	            				<img src="assets/img/settings/user_icon_lg.png" />
+		            			<img src="assets/img/settings/user_icon_md.png" />
+		            			<img src="assets/img/settings/user_icon_sm.png" />
 	            			</div>
 	            			<span class="hint-three">以上是您头像的三种尺寸</span>
 	            			<div class="btn-box">
@@ -84,8 +84,8 @@
 	<div class="settings-main">
 		<div class="tabs">
 	  		<ul class="nav nav-tabs" role="tablist">
-	    		<li role="presentation" class="active"><a href="#info" aria-controls="info" role="tab" data-toggle="tab"><img class="info-icon" src="../../../assets/img/settings/info_icon.png">基本信息</a></li>
-	    		<li role="presentation"><a href="#passwd" aria-controls="passwd" role="tab" data-toggle="tab"><img class="info-icon" src="../../../assets/img/settings/passwd_icon.png">修改密码</a></li>
+	    		<li role="presentation" class="active"><a href="#info" aria-controls="info" role="tab" data-toggle="tab"><img class="info-icon" src="assets/img/settings/info_icon.png">基本信息</a></li>
+	    		<li role="presentation"><a href="#passwd" aria-controls="passwd" role="tab" data-toggle="tab"><img class="info-icon" src="assets/img/settings/passwd_icon.png">修改密码</a></li>
 	  		</ul>
 		</div>
 		<div class="tab-content">
