--- a/src/less/basic.less
+++ b/src/less/basic.less
@@ -88,3 +88,34 @@ div[ui-view="content"]{
 .coms-pagination .page-go-btn:hover{
     background: darkgreen;
 }
+.btn-custom-modal{
+    background: #3FBBCF;
+    border: none;
+    width: 80px;
+}
+
+// 弹出框
+.modal-dialog{
+    margin-top: 10%;
+}
+.confirm-modal-body{
+    background: #fff;
+    border-radius: 5px;
+    border: 2px solid #3FBBCF;
+    padding: 10px; 
+    text-align: center;
+}
+.confirm-modal-content{
+    margin: 10px;
+    height: 420px;
+    background: url('assets/img/modal/modalbg.png') no-repeat;
+}
+.modal-inner-content{
+    color: #12879A;
+    line-height: 40px;
+    min-height: 200px;
+    padding:30px;
+    padding-top: 100px;
+    text-align: center;
+    font-size: 20px;
+}
