--- a/src/less/prepare.less
+++ b/src/less/prepare.less
@@ -171,3 +171,34 @@
     float: right;
     margin-top: 10px;
 }
+
+// 新建备课夹 弹出框
+.modal-prepare-body{
+    background: #fff;
+    border-radius: 5px;
+    border: 2px solid #41C9A9;
+    text-align: center;
+    padding: 0;
+}
+.modal-prepare-header{
+    height: 36px;
+    background: #41C9A9;
+    color: #fff;
+    padding-top: 6px;
+}
+.modal-prepare-content{
+    margin: 10px;
+    height: 320px;
+}
+.modal-inner-content{
+    color: #666;
+    line-height: 20px;
+    min-height: 200px;
+    padding:30px;
+    padding-top: 100px;
+    text-align: center;
+    font-size: 20px;
+}
+.modal-catogry{
+    margin-bottom: 15px;
+}
