--- a/src/coms/prepare/views/prepare-content.html
+++ b/src/coms/prepare/views/prepare-content.html
@@ -3,7 +3,7 @@
 		<div class="list-header" ng-click="switch($index)">
 			<span class="list-header-title">{{$index+1}}、{{list.title}}</span>
 			<i class="icon-edit edit-prepare"></i> 
-			<i class="icon-trash"></i>
+			<i class="icon-trash" ng-click="deletePrepare($index,$event)"></i>
 			<span class="online-course" ui-sref="onlineres"><i class="icon-play-circle"></i>在线授课</span>
 			<span class="zip-download"><i class="icon-cloud-download"></i> 打包下载</span>
 			
