--- a/src/coms/prepare/views/prepare.html
+++ b/src/coms/prepare/views/prepare.html
@@ -30,12 +30,22 @@
 		<div class="modal-prepare-content">
 			<div class="modal-inner-content">
 				<div class="modal-catogry">
-					<span>教材目录</span>
-					<span>教材目录</span>
+					<span>教材目录：</span>
+					<span class="catogry-trigger" id="catogry-trigger" ng-click="treeTrigger()" >
+						<span class="select-current" href="">分式的运算</span>
+						<i class="icon-angle-down"></i>
+						<i class="icon-angle-up"></i>
+					</span>
+					<div class="tree-embed" ng-show="showTree">
+						<treecontrol id="tree-embed" click-outside="closeThis()" outside-if-not="tree-embed,catogry-trigger" class="tree-light" tree-model="treedata" on-selection="showSelected(node)" expanded-nodes="expandedNodes" options="opts">
+					     label: {{node.label}} ({{node.id}})
+					 	</treecontrol>
+					</div>
+					
 				</div>
 				<div class="modal-prepare-name">
 					<span>备课夹名称：</span>
-					<input />
+					<input class="prepare-name-input" ng-model="prepareName"/>
 				</div>
 			</div>
 			<button class="btn btn-lg btn-success btn-custom-modal" ng-click="prepareOK()">确定</button>
