筛选栏更新 ie9 ajax

--- a/src/less/res.less
+++ b/src/less/res.less
@@ -327,6 +327,7 @@
   padding: 6px;
   margin: 8px 0;
   cursor: pointer;
+  font-size: 13px;
 }
 .res-list-main .res-list-item:hover{
     background: #e6f4f4;
