走通 目录树到 备课夹

--- a/src/coms/prepare/views/prepare.html
+++ b/src/coms/prepare/views/prepare.html
@@ -32,7 +32,7 @@
 				<div class="modal-catogry">
 					<span>教材目录：</span>
 					<span class="catogry-trigger" id="catogry-trigger" ng-click="treeTrigger()" >
-						<span class="select-current" href="">分式的运算</span>
+						<span class="select-current" href="">{{ currentNode.label }}</span>
 						<i class="icon-angle-down"></i>
 						<i class="icon-angle-up"></i>
 					</span>
