--- a/src/less/basic.less
+++ b/src/less/basic.less
@@ -49,6 +49,10 @@ div[ui-view="content"]{
     50% { -webkit-transform: scale(0.8); }
     100% { -webkit-transform: scale(1); }
 }
+// 目录树
+treecontrol{
+    text-align: left;
+}
 // 资源页公用样式
 #res-container{
     
