--- a/src/less/res.less
+++ b/src/less/res.less
@@ -339,12 +339,17 @@
   left: 20px;
   top: 40px;
 }
-
+.res-thubmlist-thumb{
+    width: 90%;
+}
 .res-list-thumb{
     margin-left: 55px;
     width:100px;
     height:100px;
     margin-right: 6px;
+}
+.res-thubmlist-info{
+    font-size: 13px;
 }
 .res-list-info{
   position: absolute;
@@ -412,5 +417,25 @@
     padding: 6px 10px;
     margin-right: 0;
     margin-left: 10px;
+}
+// 列出备课夹
+.addPrepare:hover .res-prepare-list{
+    display: block;   
+}
+.res-prepare-list{
+    position: absolute;
+    right: 40px;
+    top:60px;
+    background: #fff;
+    padding: 10px 20px;
+    display: none;
+    color: #999;
+}
+.res-prepare-list-item{
+    margin: 5px;
+}
+.res-prepare-list-item:hover{
+    text-decoration: underline;
+    color: #0094CE;
 }
 
