--- a/src/coms/layout/header/header4.html
+++ b/src/coms/layout/header/header4.html
@@ -5,7 +5,7 @@
 			<img ui-sref="systemres" class="section-logo" ng-src="assets/img/{{pageLogo}}/{{pageLogo}}.png" />
 			<span class="section-title">{{pageTitle}}</span>
 			<ul class="message">
-				<li><a ui-sref="settings"><i class="icon-user"></i> &nbsp;XXX,欢迎您</a></li>
+				<li><a ui-sref="settings"><i class="icon-user"></i> {{ userTrueName }},欢迎您</a></li>
 				<li><a ui-sref="message">消息</a></li>
 				<li><a ui-sref="help">帮助中心</a></li>
 				<li><a ng-click="logout()">退出</a></li>
