--- a/src/less/settings.less
+++ b/src/less/settings.less
@@ -209,17 +209,15 @@
     position: relative;
 }
 
-.modal-dialog {
-    width: 670px;
-}
-
 .modal-content {
     background-color: rgba(255,255,255,0);
     border-radius: 12px;
+    box-shadow: 
 }
 
 .avatar-modal-body {
    padding: 0; 
+   width: 670px;
 }
 
 .avatar-tabs ul {
@@ -228,33 +226,46 @@
 
 .avatar-tabs li {
     float: left;
-    width: 220px;
+    width: 160px;
     color: #FFFFFF;
     font-size: 1.7rem;
-    padding: 4px 0 0 43px;
+    padding: 0;
+    position: relative;
+    height: 44px;
+    z-index: 10;
 }
 
 .avatar-tabs li>a {
     color: #FFFFFF;
     font-weight: 400;
     letter-spacing: 2px;
+    display: block;
+    position: absolute;
+    top: 4px;
+    left: 35px;
 }
 
-.avatar-tabs li:first-child {
-    position: absolute;
-    left: 0;
-    top: 0;
-    background: url(../../../assets/img/settings/tab_active.png) no-repeat;    
-    z-index: 1000;
+.avatar-tabs li>img {
+    height: 43px;
 }
 
-.avatar-tabs li:last-child {
-    position: absolute;
-    top: 0;
-    left: 140px;
-    background: url(../../../assets/img/settings/tab2_active.png) no-repeat;
-    height: 44px;
-}
+
+
+//.avatar-tabs li:first-child {
+//    position: absolute;
+//    left: 0;
+//    top: 0;
+//    background: url(../../../assets/img/settings/tab_active.png) no-repeat;    
+//    z-index: 1000;
+//}
+
+//.avatar-tabs li:last-child {
+//    position: absolute;
+//    top: 0;
+//    left: 140px;
+//    background: url(../../../assets/img/settings/tab2_active.png) no-repeat;
+//    height: 44px;
+//}
 
 .avatar-tab-content {
     width: 100%;
@@ -275,13 +286,30 @@
  }
  
 .avatar-tab-content li {
-    width: 15%;
+    width: 18%;
     float: left;
     margin: 5px 5px;
+    padding: 5px 5px;
+    position: relative;
+    background-color: #FFFFFF;
+}
+
+//.avatar-tab-content li .avatar-ok {
+//  color: #FFFFFF;
+//  position: absolute;
+//  bottom: 5px;
+//  right: 5px;
+//  height: 15px;
+//  width: 15px;
+//}
+
+.avatar-tab-content li.avatar-selected {
+    border: 3px solid #219B81;
 }
 
 .avatar-tab-content li img {
     width: 100%;
+    cursor: pointer;
 }
 
 .button-group {
@@ -313,6 +341,7 @@
     float: none;
     margin: 25px auto;
     cursor: pointer;
+    background: none;
 }
 
 .self-avatar-panel li:first-child {
@@ -393,6 +422,40 @@
     margin-right: 20px;
 }
 
+//红色提示消息
+.hint-five {
+    color: #DD2222;
+}
+
 .panel-three .btn-box {
     text-align: right;
+}
+
+//消息弹出框
+.message-modal-body {
+    background: url(../../../assets/img/settings/message_alert.png) no-repeat;
+    height: 300px;
+    width: 450px;
+    text-align: center;
+    font-size: 1.6rem;
+}
+
+.message-modal-body p {
+    margin: auto;
+    margin-bottom: 30px;
+    width: 50%;
+    text-align: left;
+    color: #666666;
+}
+
+.message-modal-body p:first-child {
+    margin-top: 60px;
+}
+
+.message-modal-body .msg {
+    color: #3FBBCF;
+}
+
+.message-modal-body button {
+    background-color: #3FBBCF;
 }
