--- a/src/less/header.less
+++ b/src/less/header.less
@@ -54,23 +54,38 @@
 }
 #header .main-nav li{
     float: left;
-    width: 160px;
+    min-width: 100px;
+    margin: 0 12px;
     height: 49px;
     vertical-align: middle;
     line-height: 49px;
     text-align: center;
+    padding: 2px;
+}
+#header .main-nav li:first-child{
+    margin-left: 0;
 }
 .main-nav li>a{
     color:#fff;
     font-size: 18px;
     padding: 0;
+    line-height: 36px;
+    padding: 3px 6px;
+}
+#header .main-nav li:hover{
+    background: #EC80AF;
+    border-radius: 6px;
 }
 .main-nav li>a:visited,.main-nav li>a:hover,.main-nav li>a:focus{
-    background: url(assets/img/nav_active.png) no-repeat;
+    background: #EC80AF;
+    border: 1px dashed #fff;
+    border-radius: 6px;
     
 }
 .main-nav .onactive{
-    background: url(assets/img/nav_active.png) no-repeat; 
+    background: #EC80AF;
+    border: 1px dashed #fff;
+    border-radius: 6px;
 }
 
 .second-banner{
