资源预览页

--- a/src/coms/res-preview/views/previewres.html
+++ b/src/coms/res-preview/views/previewres.html
@@ -1,5 +1,9 @@
 ﻿<div class="container" id="preview-container">
-	<div class="header-nav-tips"></div>
+	<div class="header-nav-tips">
+		<span>基础资源<i class="icon-angle-right"></i></span>
+		<span>高中语文<i class="icon-angle-right"></i></span>
+		<span>荷塘月色<i class="icon-angle-right"></i></span>
+	</div>
 	<div class="slide-container col-md-10">
 		<div class="slide-content">
 			<div class="slide-arrow slide-pre" ng-click="slidePre()"><i class="icon-chevron-left"></i></div>
