--- a/src/less/settings.less
+++ b/src/less/settings.less
@@ -212,7 +212,6 @@
 .modal-content {
     background-color: rgba(255,255,255,0);
     border-radius: 12px;
-    box-shadow: 
 }
 
 .avatar-modal-body {
@@ -433,7 +432,7 @@
 
 //消息弹出框
 .message-modal-body {
-    background: url(../../../assets/img/settings/message_alert.png) no-repeat;
+    background: url(assets/img/settings/message_alert.png) no-repeat;
     height: 300px;
     width: 450px;
     text-align: center;
