--- a/src/coms/search/views/search.html
+++ b/src/coms/search/views/search.html
@@ -19,7 +19,7 @@
 				</div>
 			</div>
 			<div class="search_box">
-				<input type="text" placeholder="请输入搜索内容" class="search_text" /><span class="search_btn">搜索</span>
+				<input type="text" placeholder="请输入搜索内容" class="search_text"  ng-model="searchKeyWord"/><span class="search_btn" ng-click="changeKeyWord()">搜索</span>
 			</div>
 			<ul class="search_list">
 				<li ng-repeat="typeNum in VM.typeNums track by $index" ng-class="VM.currentTypeNum[$index]?'selected':''" ng-click="VM.typeClick($index)">{{typeNum.type}}</li>
@@ -55,12 +55,12 @@
 		</div>
 		<div class="sumBox">
 			<input type="checkbox" ng-checked="allCheck" ng-model="allCheck" class="allCheck" ng-checked="allCheck">本页全选
-			<span>共{{listLength}}条，每页显示<input type="text" value=""/></span>条
+			<span>共{{listLength}}条，每页显示<input type="text" value="10"  ng-change="changePerPage()" ng-model="inputPerPage"/></span>条
 			<label class="res-download allDown"><i class="icon-download-alt"></i>点击下载</label>
 		</div>
 		<div class="pageBox">
 			<div class="coms-pagination">
-				<uib-pagination total-items="bigTotalItems" ng-model="bigCurrentPage" max-size="maxSize" boundary-link-numbers="true" previous-text="上一页" next-text="下一页"></uib-pagination>
+				<uib-pagination num-pages="pageSize" total-items="bigTotalItems" ng-change="changePage()" ng-model="bigCurrentPage" max-size="maxSize" boundary-link-numbers="true" previous-text="上一页" next-text="下一页"></uib-pagination>
 				<div class="page-go">
 					<span class="page-text">转到</span>
 					<input class="page-input" />
@@ -68,7 +68,6 @@
 				</div>
 			</div>
 		</div>
-
 	</div>
 
 </div>
