--- a/src/less/search.less
+++ b/src/less/search.less
@@ -104,10 +104,16 @@
     min-height: 500px;
   
 }
+#search-container .res-list-info
+{
+    cursor: default !important; 
+}
 #search-container .res-list-item{
     border-top: 1px solid #D3D3D3;
     margin: 0px;
     padding: 15px 0px;
+    cursor: default !important;
+  
 }
 #search-container .res-list-thumb{
     border: 2px solid #219B81;
