--- a/src/less/settings.less
+++ b/src/less/settings.less
@@ -212,7 +212,7 @@
 .modal-content {
     background-color: rgba(255,255,255,0);
     border-radius: 12px;
-    box-shadow: 
+    box-shadow: none;
 }
 
 .avatar-modal-body {
