--- a/src/coms/res-system/views/systemres.html
+++ b/src/coms/res-system/views/systemres.html
@@ -15,7 +15,7 @@
 	
 	<!-- 备课夹悬浮  -->
 	<div class="prepare-fixed">
-		<div class="prepare-shop">
+		<div class="prepare-shop" ui-sref="prepare">
 			<img src="assets/img/shopcart.png"/>
 			<span class="shop-count">{{ shopCount }}</span>
 			<div class="prepare-text">备课夹</div>
