--- a/src/less/res.less
+++ b/src/less/res.less
@@ -396,14 +396,15 @@
     color:@color5;
     margin-left: 10px;
     margin-top: 5px;
+    cursor: pointer;
 }
 .res-list-tools .res-download i{
     margin-right: 5px;
     font-size: 18px;
 }
-.res-download:hover{
-    text-decoration: underline;
-}
+//.res-download:hover{
+//  text-decoration: underline;
+//}
 // 缩略图显示
 .res-list-main .res-ul-thubmlist {
   position: relative;
