--- a/src/less/basic.less
+++ b/src/less/basic.less
@@ -68,7 +68,8 @@ treecontrol{
 }
 .coms-pagination{
     line-height: 20px;
-    padding-left:30px;
+    padding-left:100px;
+    margin-top: 30px;
     display: inline-block;
 }
 .coms-pagination .page-go{
