系统资源页

--- a/src/less/res.less
+++ b/src/less/res.less
@@ -414,6 +414,7 @@
   border-bottom: 1px dashed #9b9b9b;
   padding: 6px;
   margin: 8px 0;
+  height: 320px;
 }
 .res-list-main .res-thubmlist-item:hover{
     background: #e6f4f4;
@@ -435,6 +436,8 @@
     padding: 10px 20px;
     display: none;
     color: #999;
+    min-width: 100px;
+    z-index: 99999;
 }
 .res-prepare-list-item{
     margin: 5px;
@@ -443,7 +446,21 @@
     text-decoration: underline;
     color: #0094CE;
 }
-
+.addPrepare-custom{
+    width: 100px;
+    float: left;
+    height: 40px;
+    padding: 0 6px !important;
+    margin-top: 5px;
+}
+.thubmlist-tools-custom .res-download{
+    float: left;
+}
+.thubmlist-tools-custom{
+    line-height: 40px;
+    height: 40px;
+    position: relative;
+}
 // 备课夹 悬浮
 .prepare-fixed{
     position: fixed;
