--- a/src/coms/res-system/views/sysres-content.html
+++ b/src/coms/res-system/views/sysres-content.html
@@ -17,9 +17,9 @@
 		<span class="type-list" ng-repeat="v in formats track by $index" ng-class="{'type-active':isFormatActive($index)}" ng-click="filterFormat($index)"> {{ v}}</span>
 	</div>
 	<div class="statistic-tab">
-		<span class="statistic-item"><i class="icon-bar-chart"></i>综合排序</span>
-		<span class="statistic-item"><i class="icon-bar-chart"></i>最多下载</span>
-		<span class="statistic-item"><i class="icon-bar-chart"></i>最新发布</span>
+		<span class="statistic-item" ng-click="dataSortByType(0)"><i class="icon-bar-chart"></i>综合排序</span>
+		<span class="statistic-item" ng-click="dataSortByType(1)"><i class="icon-bar-chart"></i>最多下载</span>
+		<span class="statistic-item" ng-click="dataSortByType(2)"><i class="icon-bar-chart"></i>最新发布</span>
 		<span class="statistic-item"></span>
 		<span class="statistic-item" ng-click="switchList(true)"><i class="icon-th-list"></i></span>
 		<span class="statistic-item" ng-click="switchList(false)"><i class="icon-th-large"></i></span>
@@ -27,7 +27,7 @@
 
 	<div class="res-list-main">
 		<ul class="res-ul-list" ng-show="isList">
-			<li class="res-list-item" ng-repeat="list in resList.list">
+			<li class="res-list-item" ng-repeat="list in resList.list track by $index" ng-init="parentIndex = $index">
 				<input class="res-checkbox" type="checkbox">
 				<img class="res-list-thumb" ng-src="{{list.thumbnailpath}}" ui-sref="previewres({resId:list.id,curTfcode:curTfcode})">
 				<span class="res-list-info" ui-sref="previewres({resId:list.id,curTfcode:curTfcode})">
@@ -42,18 +42,18 @@
 					<div class="res-select addPrepare">
 						加入备课夹
 						<div class="res-prepare-list" >
-							<div class="res-prepare-list-item" ng-repeat="item in prepareList track by $index"  ng-click="addToPrepare($index)">{{item.title}}</div>
+							<div class="res-prepare-list-item" ng-repeat="item in prepareList track by $index"   ng-click="addToPrepare(parentIndex, $index)">{{item.title}}</div>
 						</div>
 					</div><br>
 					
-					<label class="res-download"><i class="icon-download-alt"></i>点击下载</label>
+					<label class="res-download" ng-click="resDownload(list.id)"><i class="icon-download-alt"></i>点击下载</label>
 				</span>
 			</li>
 		</ul>
 		<ul class="res-ul-thubmlist" ng-show="!isList">
-			<li class="res-thubmlist-item col-md-4" ng-repeat="list in resList.list">
+			<li class="res-thubmlist-item col-md-4" ng-repeat="list in resList.list track by $index"  ng-init="parentIndex = $index">
 				<input class="res-checkbox" type="checkbox">
-				<img class="res-thubmlist-thumb" src="assets/img/title.png">
+				<img class="res-thubmlist-thumb" ng-src="{{list.thumbnailpath}}" fallback-src="assets/img/title.jpg">
 				<span class="res-thubmlist-info">
 					<label class="res-title">{{ list.title }}</label><br>
 					<label class="res-type">类型: {{ list.mtype }}</label>
@@ -62,10 +62,15 @@
 					
 					<label class="res-number">{{list.clickTimes}}浏览/{{list.dloadTimes}}下载</label>
 				</span>
-				<span class="res-thubmlist-tools">
+				<div class="res-thubmlist-tools thubmlist-tools-custom">
 					<label class="res-download"><i class="icon-download-alt"></i>点击下载</label>
-					<add-to-cart-button class="res-select">加入备课夹</add-to-cart-button>
-				</span>
+					<div class="res-select addPrepare  addPrepare-custom">
+						加入备课夹
+						<div class="res-prepare-list" >
+							<div class="res-prepare-list-item" ng-repeat="item in prepareList track by $index"  ng-click="addToPrepare(parentIndex, $index)">{{item.title}}</div>
+						</div>
+					</div>
+				</div>
 			</li>
 		</ul>
 		<div style="clear:both"></div>
