--- a/src/coms/res-system/views/sysres-content.html
+++ b/src/coms/res-system/views/sysres-content.html
@@ -29,7 +29,7 @@
 		<ul class="res-ul-list" ng-show="isList">
 			<li class="res-list-item" ng-repeat="list in resList.list track by $index" ng-init="parentIndex = $index">
 				<input class="res-checkbox" type="checkbox">
-				<img class="res-list-thumb" ng-src="{{list.thumbnailpath}}" ui-sref="previewres({resId:list.id,curTfcode:curTfcode})">
+				<img class="res-list-thumb" ng-src="{{list.thumbnailpath}}" fallback-src="assets/img/statistic.png" ui-sref="previewres({resId:list.id,curTfcode:curTfcode})">
 				<span class="res-list-info" ui-sref="previewres({resId:list.id,curTfcode:curTfcode})">
 					<label class="res-title">{{ list.title }}</label><br>
 					<label class="res-type">类型: {{ list.mtype }}</label>
