--- a/src/coms/res-area/views/areares.html
+++ b/src/coms/res-area/views/areares.html
@@ -11,5 +11,19 @@
 		
 	</div>
 	<!--右侧资源列表-->
-	<div class="col-md-9" data-ng-include="'/coms/res-system/views/sysres-content.html'"></div>
+	<div class="col-md-9" data-ng-include="'/coms/res-area/views/area-content.html'"></div>
+	
+	<!-- 备课夹悬浮  -->
+	<div class="prepare-fixed">
+		<div class="prepare-shop" ui-sref="prepare">
+			<img src="assets/img/shopcart.png"/>
+			<span class="shop-count">{{ shopCount }}</span>
+			<div class="prepare-text">备课夹</div>
+		</div>
+		<div class="prepare-ctrls">
+			<div class="ctrls-prepare-list" >
+				<div class="ctrls-prepare-list-item" ng-repeat="item in prepareList track by $index" >{{item.title}}</div>
+			</div>
+		</div>
+	</div>
 </div>
